src/test/deca/syntax/invalid/mauvais_return_2.deca
// Description:
//    on retourne print qui n'est pas une exp
//
// Resultats:
// ligne 8: "no viable alternative at input 'print'"


{ return print("hey");}
